<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">URSA</string>
    <string name="title_home">WELCOME ADMIN</string>
    <string name="title_logout">Sign out</string>
    <string name="title_login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <!--   debug key-->
    <string name="default_web_client_id">1063218799631-q8nv1mh8ameqhbdub7ghsqfjn9nfio55.apps.googleusercontent.com</string>
    <string name="default_andriod_client_id">1063218799631&#8211;1us939f98pm6rpho3tkge5v8e090dk8b.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1775230789444006</string>
    <string name="fb_login_protocol_scheme">fb1775230789444006</string>
    <!--Production key-->
    <!-- <string name="default_andriod_client_id">849972602412-bhhccc5lmdtfepnq3t25roh0up5hmnni.apps.googleusercontent.com</string>
     <string name="default_web_client_id">849972602412-59q3slsllfasgf078v1aodohv78uugtk.apps.googleusercontent.com</string>
     <string name="facebook_app_id">2048327382110702</string>
     <string name="fb_login_protocol_scheme">fb2048327382110702</string>-->
    <string name="title_activity_register">REGISTER</string>
    <string name="action_on_bluetooth">Make discovery</string>


    <string name="not_support">not support</string>
    <string name="need_location">Need location permission</string>
    <string name="location_warn">Please allow location information, otherwise part of the function will not work properly！</string>
    <string name="function_limited">Limited function </string>
    <string name="location_refused">Since the permission to access the location is not granted, part of the application functionality will be limited.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit_profile">Edit profile</string>
    <string name="action_account">User profile</string>
    <string name="sync">Sync</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="transfer">TRANSFER</string>
    <string name="home">Home</string>
    <string name="cont">CONTINUE</string>
    <string name="title_activity_userdetails">UserdetailsActivity</string>
    <string name="search_hint">Find user by name</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_reset">Reset</string>
    <string name="action_restart">Restart</string>
    <string name="action_unbind">Unbind</string>
    <string name="action_bike">Record Bike</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="scanning">scanning for devices&#8230;</string>
    <string name="Switch">Switch <xliff:g id="i">%1$s</xliff:g></string>
    <string name="setTime">Set Time: <xliff:g id="settime">%1$s</xliff:g></string>
    <string name="repeat">Repeat: <xliff:g id="repeat">%1$s</xliff:g></string>
    <string name="Alarm">Alarm <xliff:g id="i">%1$s</xliff:g></string>
    <string name="temp">Temperature: <xliff:g id="temp_value">%1$s</xliff:g> degrees</string>
    <string name="DeviceID">Device ID:<xliff:g id="remote_ID">%1$s</xliff:g></string>
    <string name="select_device">Get available device</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connecting">connecting...</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected and data transfer successfully</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_welcome">Take Bike </string>
    <string name="title_activity_info">User Information</string>
    <string name="title_activity_bind">Bind Bracelet</string>
    <string name="felix_goody_felix_goody">Felix Goody Felix Goody</string>
    <string name="grco2">grCO2</string>
    <string name="_0123456789">0123456789</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_pwd"><u>Forgot Password?</u></string>
    <string name="smart">SMART</string>
    <string name="scandone">Scan Done</string>
    <string name="bracelet">BRACELET</string>
    <string name="e_mail">E-mail</string>
    <string name="todo">TODO</string>
    <string name="title_activity_resetpassword">Reset password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_reset_code">Enter reset code</string>
    <string name="please_wait_10_15_sec_for_connection_and_bracelet_data_sychronization_and">Please wait 10-15 sec for connection and bracelet data sychronization</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="title_activity_setting">Setting</string>
    <string name="clear_data">Clear Data</string>
    <string name="unbind_device">Unbind device</string>
    <string name="bind_device">Bind device</string>
    <string name="reset_bracelet">Reset Band</string>
    <string name="exit">Exit</string>
    <string name="find_band">Find Band</string>
    <string name="shutdown_band">Shutdown Band</string>
    <string name="scroll_up_to_load_more">Scroll Up for more users</string>


</resources>
