<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerback"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.softdev.smarttechx.smartbracelet.ResetpasswordActivity"
    tools:showIn="@layout/activity_resetpassword">


    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorWhite"
        android:textColorHint="@android:color/white">

        <AutoCompleteTextView
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/editText3"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_email"

            android:fontFamily="sans-serif"
            android:gravity="center"
            android:hint="E-mail"
            android:inputType="textAutoCorrect|textAutoComplete|textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18sp" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/resetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/editResetCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_key"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/enter_reset_code"
                android:inputType="textPassword"
                android:password="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@android:color/white">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_key"

                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:password="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:textAllCaps="false" />

</LinearLayout>
