<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="200."
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".5"
                android:ellipsize="end"
                android:maxEms="25"
                android:maxLines="1"
                android:text="@string/felix_goody_felix_goody"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/condata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="10"
                android:maxLines="1"
                android:paddingRight="2dp"
                android:text="@string/_0123456789"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="1dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="5"
                android:maxLines="1"
                android:text="@string/grco2"
                android:textColor="@color/stepbikecolor"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rawdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="10"
                android:maxLines="1"
                android:text="0123476789"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/labelstep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="1dp"
                android:layout_weight=".8"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxEms="5"
                android:maxLines="1"
                android:text="steps"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

